# render_engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
data_dir/: base.frag  (+4 more)
demo/: CMakeLists.txt  DemoApplication.cpp  DemoApplication.h  MultiWindowApplication.cpp  MultiWindowApplication.h  main.cpp
demo/cmake/: compile_shaders.cmake
demo/config/: demo_resource_config_in.h
demo/resources/shaders/: billboard.frag.spv  billboard.vert  billboard.vert.spv  ct_volume.frag  ct_volume.frag.spv  ct_volume.vert  ct_volume.vert.spv  ct_volume_ao.frag  ct_volume_ao.frag.spv  ct_volume_ao.vert.spv  frag.spv  nolit.frag  nolit.frag.spv  nolit.vert  nolit.vert.spv
demo/src/: ApplicationContext.cpp  ApplicationContext.h  DemoApplication.cpp  DemoApplication.h  DemoSceneBuilder.cpp  DemoSceneBuilder.h  DeviceSelector.cpp  DeviceSelector.h  MultiWindowApplication.cpp  MultiWindowApplication.h  OffScreenTestApplication.cpp  OffScreenTestApplication.h  ParallelDemoApplication.cpp  ParallelDemoApplication.h  VolmeRendererDemo.cpp  VolumeRendererDemo.h  WindowSetup.cpp  WindowSetup.h  main.cpp
demo/src/assets/: AssetDatabase.h  BillboardMaterial.cpp  BillboardMaterial.h  CtVolumeMaterial.cpp  CtVolumeMaterial.h  IMaterial.h  NoLitMaterial.cpp  NoLitMaterial.h
demo/src/scene/: Camera.cpp  Camera.h  MeshObject.cpp  MeshObject.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  SceneNodeLookup.cpp  SceneNodeLookup.h  SceneObject.h  SceneRenderManager.cpp  SceneRenderManager.h  Transformation.h  VolumeObject.cpp  VolumeObject.h
demo/src/ui/: AssetBrowserUi.cpp  AssetBrowserUi.h
render_engine/: CMakeLists.txt
render_engine/config/: data_config_in.h
render_engine/documentation/: command_context.md  descriptor-set-layout-setup.md  distance-field-calculation.md  handling-errors.md  logical_device.md  multiple_queue_family_support.md  object-initializations.md  objects-responsibility.md  offscreen-rendering.md  resource-state-machine.md  resource_uploader.md  singletons.md  synchronization-primitives.md  volume-rendering.md  volume-rendering_ao.md
render_engine/documentation/excalidraw/: API_overview.excalidraw
render_engine/documentation/todo/: logical_device.md  parallel_rendering.md  render_graph.md  resource_batch_upload.md  resource_uploader.md
render_engine/documentation/umlet/: data_transfer.uxf  queue_ownership_transfer.uxf
render_engine/include/render_engine/: AbstractRenderer.h  Buffer.h  CommandContext.h  CommandPoolFactory.h  DataTransferScheduler.h  DataTransferTasks.h  Debugger.h  Device.h  DeviceLookup.h  Drawer.h  ExampleRenderer.h  FrameBuffer.h  GUIDrawer.h  GpuResourceManager.h  IRenderEngine.h  LogicalDevice.h  ParallelRenderEngine.h  QueueLoadBallancer.h  QueueSubmitTracker.h  RenderContext.h  RenderEngine.h  RenderPass.h  RendererFactory.h  SwapChain.h  SynchronizationPrimitives.h  TransferEngine.h  UIRenderer.h  VulkanQueue.h  Window.h
render_engine/include/render_engine/assets/: Geometry.h  Image.cpp  Image.h  Image3D.h  Material.h  MaterialInstance.h  Mesh.h  Shader.h  TextureAssignment.h  TextureBindingMap.h  VolumeMaterial.h  VolumeMaterialInstance.h  VolumeShader.h  VolumetricObject.h
render_engine/include/render_engine/containers/: BackBuffer.h  ImageStream.h  IndexSet.h  VariantOverloaded.h  Views.h
render_engine/include/render_engine/debug/: Console.h  ConsoleColor.h  Profiler.h  SyncLogbook.h  Topic.h
render_engine/include/render_engine/memory/: Buffer.h  RefObj.h
render_engine/include/render_engine/renderers/: AbstractRenderer.h  ExampleRenderer.h  ForwardRenderer.h  ImageStreamRenderer.h  MainCameraRenderer.h  SingleColorOutputRenderer.h  UIRenderer.h  VolumeRenderer.h
render_engine/include/render_engine/rendergraph/: ExecutionContext.h  Graph.h  GraphVisitor.h  Job.h  Link.h  Node.h  RenderGraphBuilder.h  TaskflowBuilder.h  Topic.h
render_engine/include/render_engine/resources/: Buffer.h  GpuResourceSet.h  PushConstantsUpdater.h  RenderTarget.h  ResourceStateMachine.h  ShaderModule.h  Technique.h  Texture.h  UniformBinding.h
render_engine/include/render_engine/synchronization/: ResourceStateMachine.h  ResourceStates.h  SyncFeedbackService.h  SyncObject.h  SyncOperations.h  SyncPrimitives.h  Topic.h
render_engine/include/render_engine/window/: IWindow.h  OffScreenWindow.h  SwapChain.h  Window.h  WindowTunnel.h
render_engine/modules/: CMakeLists.txt
render_engine/modules/cuda_compute/: CMakeLists.txt
render_engine/src/: AbstractRenderer.cpp  Buffer.cpp  CommandContext.cpp  CommandPoolFactory.cpp  DataTransferScheduler.cpp  DataTransferTasks.cpp  Debugger.cpp  Device.cpp  DeviceLookup.cpp  Drawer.cpp  ExampleRenderer.cpp  FrameBuffer.cpp  GUIDrawer.cpp  GpuResourceManager.cpp  LogicalDevice.cpp  ParallelRenderEngine.cpp  QueueLoadBallancer.cpp  QueueSubmitTracker.cpp  RenderContext.cpp  RenderEngine.cpp  RenderPass.cpp  RendererFactory.cpp  SwapChain.cpp  TransferEngine.cpp  UIRenderer.cpp  VulkanQueue.cpp  Window.cpp
render_engine/src/assets/: Image.cpp  Image3D.cpp  Material.cpp  MaterialInstance.cpp  Shader.cpp  TextureAssignment.cpp  TextureBindingMap.cpp  TextureBindingMap.h  VolumeMaterial.cpp  VolumeMaterialInstance.cpp  VolumeShader.cpp  VolumetricObject.cpp
render_engine/src/debug/: SyncLogbook.cpp
render_engine/src/memory/: Buffer.cpp
render_engine/src/renderers/: AbstractRenderer.cpp  ExampleRenderer.cpp  ForwardRenderer.cpp  ImageStreamRenderer.cpp  MainCameraRenderer.cpp  SingleColorOutputRenderer.cpp  UIRenderer.cpp  VolumeRenderer.cpp
render_engine/src/rendergraph/: ExecutionContext.cpp  Graph.cpp  Job.cpp  Link.cpp  Node.cpp  RenderGraphBuilder.cpp  TaskflowBuilder.cpp
render_engine/src/resources/: Buffer.cpp  GpuResourceSet.cpp  PushConstantsUpdater.cpp  RenderTarget.cpp  ResourceStateMachine.cpp  ShaderModule.cpp  Technique.cpp  Texture.cpp  UniformBinding.cpp
render_engine/src/synchronization/: ResourceStateMachine.cpp  SyncObject.cpp  SyncOperations.cpp  SyncPrimitives.cpp
render_engine/src/window/: OffScreenWindow.cpp  SwapChain.cpp  Window.cpp  WindowTunnel.cpp
(+18 files in other folders)
